--- a/.drone.yml
+++ b/.drone.yml
@@ -24,6 +24,7 @@ steps:
     build_args:
     - GORELEASER_VERSION=v1.5.0
     - GO_SWAGGER_VERSION=v0.28.0
+    - DOCKER_BUILDX_VERSION=v0.7.0
     - GO_CONTAINER_VERSION=1.17.7-alpine3.14
   when:
     event:
