--- a/.drone.yml
+++ b/.drone.yml
@@ -20,12 +20,12 @@ steps:
     repo: superseriousbusiness/gotosocial-drone-build
     tags:
     - latest 
-    - "0.0.3"
+    - "0.0.4"
     build_args:
-    - GORELEASER_VERSION=v1.5.0
-    - GO_SWAGGER_VERSION=v0.28.0
+    - GORELEASER_VERSION=v1.7.0
+    - GO_SWAGGER_VERSION=v0.29.0
     - DOCKER_BUILDX_VERSION=v0.7.0
-    - GO_CONTAINER_VERSION=1.17.7-alpine3.14
+    - GO_CONTAINER_VERSION=1.18-alpine
   when:
     event:
       include:
@@ -43,6 +43,6 @@ trigger:
 
 ---
 kind: signature
-hmac: 3dc6bcaa81a4426e744c9358559adc2f2f50d78ee825dffb9e270ba6cf23d754
+hmac: f213f4358f291f2dfd9e7a41259306652cd9e3195c5b5c4b4928fb66f9d288c0
 
 ...
