add jd for nicer JSON diffs

--- a/.drone.yml
+++ b/.drone.yml
@@ -24,6 +24,7 @@ steps:
     build_args:
     - GORELEASER_VERSION=v1.12.3
     - GO_SWAGGER_VERSION=v0.30.0
+    - JD_VERSION=v1.7.1
     - DOCKER_BUILDX_VERSION=v0.9.1
     - GO_CONTAINER_VERSION=1.19.5-alpine
   when:
