add minio, jq, snapshot publish script

--- a/.drone.yml
+++ b/.drone.yml
@@ -25,6 +25,7 @@ steps:
     - GORELEASER_VERSION=v1.20.0
     - GO_SWAGGER_VERSION=v0.30.4
     - JD_VERSION=v1.7.1
+    - MINIO_MC_VERSION=RELEASE.2023-08-08T17-23-59Z
     - DOCKER_BUILDX_VERSION=v0.11.2
     - GO_CONTAINER_VERSION=1.21.0-alpine
   when:
